syntax = "proto3";

option go_package = "github.com/BalliAsghar/micro/product/product";

// To generate the go code, run the following command:

/*
protoc --go_out=. --go_opt=paths=source_relative \
--go-grpc_out=. --go-grpc_opt=paths=source_relative \
product/product.proto
*/

package product;

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    string price = 4;
}

message ProductList {
    repeated Product products = 1;
}


service ProductService {
    rpc GetProduct (ProductRequest) returns (Product) {}
    rpc GetProductList (ProductListRequest) returns (ProductList) {}
}


message ProductRequest {
    string id = 1;
}

message ProductListRequest {
    string name = 1;
}

